--- a/App_Resources/Android/app.gradle
+++ b/App_Resources/Android/app.gradle
@@ -9,7 +9,7 @@ android {
   // ndkVersion ""
 
   defaultConfig {
-    minSdkVersion 17
+    minSdkVersion 19
     // targetSdkVersion 32
 
     // Version Information
@@ -17,6 +17,7 @@ android {
     versionName "1.0.0"
     
     generatedDensities = []
+	multiDexEnabled true
   }
 
   aaptOptions {
