--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nativescript/firebase-firestore": "^2.0.2",
     "@nativescript/firebase-storage": "^2.0.2",
     "@nativescript/theme": "~3.0.2",
+    "nativescript-clipboard": "^2.1.1",
     "nativescript-ui-sidedrawer": "~10.0.2",
     "rxjs": "~7.5.0",
     "zone.js": "~0.11.5"
